Revision history for Perl extension Catalyst::View::TT.

0.42   2014-12-29
        - Fixes to test cases to be compatible with Catalyst v5.90080

0.41   2013-02-28
        - New local attribute to let you override the default content type when
          no content type has been set for the response.

0.40   2013-01-15 20:52:14
        - Fix hash randomisation breakage in tests (RT#82703)

0.39   2012-04-11 07:40:00
        - Fix warning from tests. RT#75104
        - Fix ExtUtils::MakeMaker version requirement (due to last release
          being made with faulty Module::Install). RT#76488

0.38   2012-02-15 20:42:00
        - Change documentation to reflect use of Moose.
        - Change documentation to highlight how to configure
          UTF-8 in templates.
        - Change documentation to recommend putting calls to MyApp->path_to
          into the app class itself, ergo avoiding recursive dependencies
          and making the view compile standalone.
        - Change code generated by Catalyst::Helper::View::TT
          to use Moose.

0.37   2011-07-17 09:20:00
        - Allow setting of TT class rather than forcing 'Template'

0.36   2010-10-19 15:00:00
        - Fixed subclassing when using expose_methods

0.35   2010-08-26 01:38:00
        - Add expose_methods functionality
        - add template name to exceptions
        - update render_die message to be more concise.
        - Doc fixes (RT#57159)
        - Silence warnings about Template::Provider::Encoding (RT #56310)

0.34   2010-04-07 04:14:50
        - Fix the process method to have the previous behaviour of reporting
          an error to Catalyst if a Template::Exception object is returned by
          the render method (i.e. when render_die is unset or set to 0).
        - Fix the warning issued about missing the render_die config option to
          log using the standard Catalyst logging system (rather than Carping
          directly), and to only issue the warning at debug level / when