@@ -2,6 +2,8 @@ Revision history for Perl extension Catalyst::View::TT.
 
 0.42   2014-12-29
         - Fixes to test cases to be compatible with Catalyst v5.90080
+        - Added a Unicode test designed to check new Catalyst function
+        - Docs for above
 
 0.41   2013-02-28
         - New local attribute to let you override the default content type when
